tests/machine/x/go/values_builtin.error
Error on line 0: run error: exit status 1
panic: values() expects map

goroutine 1 [running]:
main._values({0x4a2740?, 0xc0001140f0?})
	/workspace/mochi/tests/machine/x/go/values_builtin.go:44 +0x36b
main.main()
	/workspace/mochi/tests/machine/x/go/values_builtin.go:17 +0x97
exit status 2

1: //go:build ignore
